@@ -1,0 +1,10 @@
+void xxx()
+{
+  unsigned i;
+  unsigned *p=0;
+  for(i=0; i<4; ++i)
+    *p++=0;
+  for(i=0; i<4; ++i)
+    *p++=0;
+}
+
